--- a/devolucao.html
+++ b/devolucao.html
@@ -17,11 +17,15 @@
             </div>
             <div class="mb-3">
                 <label for="empresa" class="form-label">Empresa</label>
-                <select class="form-control" id="empresa" required></select>
+                <select class="form-control" id="empresa" required>
+                    <option value="">Selecione uma empresa</option>
+                </select>
             </div>
             <div class="mb-3">
                 <label for="produto" class="form-label">Produto</label>
-                <select class="form-control" id="produto" required></select>
+                <select class="form-control" id="produto" required>
+                    <option value="">Selecione um produto</option>
+                </select>
             </div>
             <div class="mb-3">
                 <label for="quantidade" class="form-label">Quantidade</label>
