--- a/dashboard.html
+++ b/dashboard.html
@@ -178,6 +178,11 @@
                 <i class="fas fa-search"></i>
                 Pesquisar Movimentações
             </button>
+            <!-- Novo botão para Cadastrar Fornecedor -->
+            <button class="menu-button" onclick="navegarPara('cadastro-fornecedor.html')">
+                <i class="fas fa-truck"></i>
+                Cadastrar Fornecedor
+            </button>
             <button class="menu-button" data-bs-toggle="modal" data-bs-target="#modalComoUsar">
                 <i class="fas fa-question-circle"></i>
                 Como Usar?
@@ -242,6 +247,12 @@
                     <p>
                         A funcionalidade de <strong>Devolução</strong> permite registrar a devolução de produtos ao
                         estoque, atualizando automaticamente as quantidades e movimentações.
+                    </p>
+
+                    <h5>Cadastrar Fornecedor</h5>
+                    <p>
+                        A funcionalidade de <strong>Cadastrar Fornecedor</strong> permite adicionar novos fornecedores ao sistema,
+                        que podem ser associados aos produtos durante o cadastro.
                     </p>
                 </div>
                 <div class="modal-footer">
