--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,63 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-        /* Estilos CSS (mantidos iguais) */
+        /* Estilo para os botões */
+        .btn-navegacao {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 15px 30px;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            font-size: 18px;
+            font-weight: 500;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin: 10px;
+        }
+
+        .btn-navegacao:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-navegacao:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .btn-cadastrar-empresa {
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+        }
+
+        .btn-cadastrar-produto {
+            background: linear-gradient(135deg, #ff416c, #ff4b2b);
+        }
+
+        .btn-cadastrar-fornecedor {
+            background: linear-gradient(135deg, #4CAF50, #8BC34A);
+        }
+
+        .btn-voltar {
+            background: linear-gradient(135deg, #4CAF50, #8BC34A);
+        }
+
+        /* Centralizar os botões na página */
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        /* Estilo para o título */
+        .titulo {
+            font-size: 24px;
+            font-weight: 600;
+            margin-bottom: 20px;
+            color: #333;
+        }
     </style>
 </head>
 <body>
@@ -27,7 +83,7 @@
             Cadastrar Produto
         </button>
 
-        <!-- Botão Cadastrar Fornecedor -->
+        <!-- Novo Botão Cadastrar Fornecedor -->
         <button class="btn-navegacao btn-cadastrar-fornecedor" onclick="navegarPara('cadastro-fornecedor.html')">
             <i class="fas fa-truck"></i>
             Cadastrar Fornecedor
