--- a/login.html
+++ b/login.html
@@ -5,71 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f8f9fa;
-        }
-        .login-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            width: 300px;
-        }
-        .login-container h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .login-container .form-control {
-            margin-bottom: 15px;
-        }
-        .login-container .btn {
-            width: 100%;
-        }
-    </style>
+    <script src="estoque.js"></script>
 </head>
 <body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <div class="form-group">
-                <input type="text" class="form-control" id="usuario" placeholder="Usuário" required>
+    <div class="container mt-5">
+        <h1>Login</h1>
+        <form id="form-login">
+            <div class="mb-3">
+                <label for="usuario" class="form-label">Usuário</label>
+                <input type="text" class="form-control" id="usuario" required>
             </div>
-            <div class="form-group">
-                <input type="password" class="form-control" id="senha" placeholder="Senha" required>
+            <div class="mb-3">
+                <label for="senha" class="form-label">Senha</label>
+                <input type="password" class="form-control" id="senha" required>
             </div>
-            <button type="submit" class="btn btn-primary">Entrar</button>
+            <button type="submit" class="btn btn-primary w-100">Entrar</button>
         </form>
-        <p class="text-center mt-3">
-            <a href="cadastro.usuario.html">Criar uma conta</a>
-        </p>
     </div>
 
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Impede o envio padrão do formulário
-
-            // Captura os valores dos campos
+        document.getElementById('form-login').addEventListener('submit', function (e) {
+            e.preventDefault();
             const usuario = document.getElementById('usuario').value;
             const senha = document.getElementById('senha').value;
 
-            console.log('Tentativa de login:', { usuario, senha }); // Log para depuração
-
             // Verifica o login
             if (verificarLogin(usuario, senha)) {
+                // Define o estado de autenticação
                 definirAutenticado(true);
-                console.log('Redirecionando para dashboard.html'); // Log para depuração
+
+                // Redireciona para o dashboard
                 window.location.href = 'dashboard.html';
             } else {
-                console.log('Login falhou'); // Log para depuração
-                alert('Usuário ou senha incorretos');
+                alert('Usuário ou senha incorretos.');
             }
         });
     </script>
-    <script src="estoque.js"></script>
 </body>
 </html>
