--- a/cadastro.html
+++ b/cadastro.html
@@ -3,61 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Produto</title>
+    <title>Cadastro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="estoque.js"></script>
     <style>
-        /* Estilos CSS (mantidos iguais) */
+        /* Estilo para os botões */
+        .btn-navegacao {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 15px 30px;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            font-size: 18px;
+            font-weight: 500;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            margin: 10px;
+        }
+
+        .btn-navegacao:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-navegacao:active {
+            transform: translateY(0);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .btn-cadastrar-empresa {
+            background: linear-gradient(135deg, #6a11cb, #2575fc);
+        }
+
+        .btn-cadastrar-produto {
+            background: linear-gradient(135deg, #ff416c, #ff4b2b);
+        }
+
+        .btn-voltar {
+            background: linear-gradient(135deg, #4CAF50, #8BC34A);
+        }
+
+        /* Centralizar os botões na página */
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        /* Estilo para o título */
+        .titulo {
+            font-size: 24px;
+            font-weight: 600;
+            margin-bottom: 20px;
+            color: #333;
+        }
     </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <!-- Botão de Voltar -->
-        <button class="btn-voltar mb-4" onclick="navegarPara('cadastro.html')">
+    <div class="container">
+        <!-- Título da Página -->
+        <h1 class="titulo">Cadastro</h1>
+
+        <!-- Botão Cadastrar Empresa -->
+        <button class="btn-navegacao btn-cadastrar-empresa" onclick="navegarPara('cadastro-empresa.html')">
+            <i class="fas fa-building"></i>
+            Cadastrar Empresa
+        </button>
+
+        <!-- Botão Cadastrar Produto -->
+        <button class="btn-navegacao btn-cadastrar-produto" onclick="navegarPara('cadastro-produto.html')">
+            <i class="fas fa-box"></i>
+            Cadastrar Produto
+        </button>
+
+        <!-- Botão Voltar -->
+        <button class="btn-navegacao btn-voltar" onclick="navegarPara('dashboard.html')">
             <i class="fas fa-arrow-left"></i>
             Voltar
         </button>
-
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="text-center">Cadastro de Produto</h3>
-                    </div>
-                    <div class="card-body">
-                        <form id="form-cadastro-produto">
-                            <div class="mb-3">
-                                <label for="nome-produto" class="form-label">Nome do Produto</label>
-                                <input type="text" class="form-control" id="nome-produto" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="tipo-produto" class="form-label">Tipo</label>
-                                <select class="form-control" id="tipo-produto" required>
-                                    <option value="unidade">Unidade</option>
-                                    <option value="kilo">Kilo</option>
-                                    <option value="litro">Litro</option>
-                                </select>
-                            </div>
-                            <div class="mb-3">
-                                <label for="empresa-produto" class="form-label">Empresa</label>
-                                <select class="form-control" id="empresa-produto" required>
-                                    <!-- Opções de empresas serão preenchidas via JavaScript -->
-                                </select>
-                            </div>
-                            <div class="mb-3">
-                                <label for="fornecedor-produto" class="form-label">Fornecedor</label>
-                                <select class="form-control" id="fornecedor-produto" required>
-                                    <!-- Opções de fornecedores serão preenchidas via JavaScript -->
-                                </select>
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
-                        </form>
-                        <p class="text-success mt-3" id="produto-message"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
     <script>
@@ -65,69 +91,6 @@
         function navegarPara(pagina) {
             window.location.href = pagina;
         }
-
-        // Preenche as opções de empresas e fornecedores ao carregar a página
-        document.addEventListener("DOMContentLoaded", function () {
-            const estoque = JSON.parse(localStorage.getItem('estoque'));
-            const selectEmpresas = document.getElementById('empresa-produto');
-            const selectFornecedores = document.getElementById('fornecedor-produto');
-
-            // Limpa as opções existentes
-            selectEmpresas.innerHTML = '<option value="">Selecione uma empresa</option>';
-            selectFornecedores.innerHTML = '<option value="">Selecione um fornecedor</option>';
-
-            // Preenche empresas
-            if (estoque.empresas && estoque.empresas.length > 0) {
-                estoque.empresas.forEach(empresa => {
-                    const option = document.createElement('option');
-                    option.value = empresa.codigo;
-                    option.textContent = empresa.nome;
-                    selectEmpresas.appendChild(option);
-                });
-            } else {
-                console.log("Nenhuma empresa cadastrada.");
-            }
-
-            // Preenche fornecedores
-            if (estoque.fornecedores && estoque.fornecedores.length > 0) {
-                estoque.fornecedores.forEach(fornecedor => {
-                    const option = document.createElement('option');
-                    option.value = fornecedor.codigo;
-                    option.textContent = fornecedor.nome;
-                    selectFornecedores.appendChild(option);
-                });
-            } else {
-                console.log("Nenhum fornecedor cadastrado.");
-            }
-        });
-
-        // Função para cadastrar produto
-        document.getElementById('form-cadastro-produto').addEventListener('submit', function (e) {
-            e.preventDefault();
-            const nome = document.getElementById('nome-produto').value;
-            const tipo = document.getElementById('tipo-produto').value;
-            const empresaCodigo = document.getElementById('empresa-produto').value;
-            const fornecedorCodigo = document.getElementById('fornecedor-produto').value;
-
-            // Verifica se todos os campos foram preenchidos
-            if (!nome || !tipo || !empresaCodigo || !fornecedorCodigo) {
-                alert("Preencha todos os campos obrigatórios.");
-                return;
-            }
-
-            // Adiciona o produto ao estoque
-            adicionarProduto(nome, tipo, empresaCodigo, fornecedorCodigo);
-
-            // Exibe mensagem de sucesso
-            document.getElementById('produto-message').textContent = 'Produto cadastrado com sucesso! Redirecionando...';
-            document.getElementById('produto-message').classList.remove('text-danger');
-            document.getElementById('produto-message').classList.add('text-success');
-
-            // Redireciona para o dashboard após 2 segundos
-            setTimeout(() => {
-                window.location.href = 'dashboard.html';
-            }, 2000);
-        });
     </script>
 </body>
 </html>
