--- a/cadastro.html
+++ b/cadastro.html
@@ -40,6 +40,10 @@
             background: linear-gradient(135deg, #ff416c, #ff4b2b);
         }
 
+        .btn-cadastrar-fornecedor {
+            background: linear-gradient(135deg, #FF9800, #FFC107);
+        }
+
         .btn-voltar {
             background: linear-gradient(135deg, #4CAF50, #8BC34A);
         }
@@ -77,6 +81,12 @@
         <button class="btn-navegacao btn-cadastrar-produto" onclick="navegarPara('cadastro-produto.html')">
             <i class="fas fa-box"></i>
             Cadastrar Produto
+        </button>
+
+        <!-- Botão Cadastrar Fornecedor -->
+        <button class="btn-navegacao btn-cadastrar-fornecedor" onclick="navegarPara('cadastro-fornecedor.html')">
+            <i class="fas fa-truck"></i>
+            Cadastrar Fornecedor
         </button>
 
         <!-- Botão Voltar -->
