--- a/entrada-nota.html
+++ b/entrada-nota.html
@@ -36,8 +36,8 @@
             </div>
             <div class="mb-3">
                 <label for="endereco" class="form-label">Endereço (Vaga)</label>
-                <select class="form-control" id="endereco">
-                    <option value="">Selecione o endereço (opcional)</option>
+                <select class="form-control" id="endereco" required>
+                    <option value="">Selecione o endereço</option>
                 </select>
             </div>
             <div class="mb-3">
@@ -116,7 +116,7 @@
             // Preenche endereços disponíveis
             function carregarEnderecosDisponiveis() {
                 const enderecosUsados = estoque.produtos.map(prod => prod.endereco);
-                const enderecosDisponiveis = ['A1', 'A2', 'A3', 'B1', 'B2', 'B3'].filter(end => !enderecosUsados.includes(end));
+                const enderecosDisponiveis = ['A1', 'A2', 'A3', 'B1', 'B2', 'B3', 'C1', 'C2', 'C3', 'D1', 'D2', 'D3'].filter(end => !enderecosUsados.includes(end));
 
                 selectEnderecos.innerHTML = '<option value="">Selecione o endereço</option>';
                 enderecosDisponiveis.forEach(end => {
@@ -161,7 +161,7 @@
                 const empresaCodigo = document.getElementById("empresa").value;
                 const produtoNome = document.getElementById("produto").value;
                 const quantidade = parseInt(document.getElementById("quantidade").value);
-                const endereco = document.getElementById("endereco").value || atribuirEnderecoAutomaticamente();
+                const endereco = document.getElementById("endereco").value;
                 const fabricacao = document.getElementById("fabricacao").value;
                 const validade = document.getElementById("validade").value;
 
@@ -172,15 +172,8 @@
                 registrarMovimentacao('entrada', numeroNota, empresaCodigo, produtoNome, quantidade);
 
                 alert("Entrada de nota registrada com sucesso!");
-                window.location.href = "dashboard.html";
+                window.location.href = "enderecamento.html"; // Redireciona para o endereçamento
             });
-
-            // Função para atribuir automaticamente um endereço disponível
-            function atribuirEnderecoAutomaticamente() {
-                const enderecosUsados = estoque.produtos.map(prod => prod.endereco);
-                const enderecosDisponiveis = ['A1', 'A2', 'A3', 'B1', 'B2', 'B3'].filter(end => !enderecosUsados.includes(end));
-                return enderecosDisponiveis[0] || 'Sem endereço disponível';
-            }
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
